# rim

./: CMakeLists.txt  fir1.vhd  main
helpers/: audiofir.m  main.m  testfir.m
include/: AudioFir.cuh
kernels/: test.cuh
src/: AudioFir.cu  audiofir1.cu  main.cu
tutorials/: 1_nvidia_add_mat  1_nvidia_add_mat.cu  1_nvidia_add_mat_cuda  hello  hello.cu  vector_add  vector_add.cu
